fixes a mailnews regression.  We need to be able to create a unique directory.  sr=dveditz, a=dveditz, bug 299133